# euterpe-gtk

./: .gitignore  README.md  com.doycho.euterpe.gtk.json  meson.build  pypi-dependencies.json  requirements.txt
data/: com.doycho.euterpe.gtk.appdata.xml.in  com.doycho.euterpe.gtk.desktop.in  com.doycho.euterpe.gtk.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: album.py  artist.py  async_artwork.py  box_album.py  box_artist.py  browse_screen.py  entry.py  entry_list.py  euterpe-gtk.in  euterpe_gtk.gresource.xml  home_screen.py  http.py  main.py  meson.build  mini_player.py  mpris.py  navigator.py  paginated_box_list.py  player.py  player_ui.py  ring_list.py  search_screen.py  service.py  simple_list.py  small_album.py  small_artist.py  state_storage.py  track.py  utils.py  window.py  window.ui
src/assets/: app-styles.css  d-bus.xml
src/log/: __init__.py  log.py
src/ui/: add-to-playlist.ui  album.ui  artist.ui  box-album.ui  box-artist.ui  browse-screen.ui  carousel-item.ui  entry-list.ui  entry.ui  home-screen.ui  image-card.ui  login-form.ui  mini-player.ui  paginated-box-list.ui  player.ui  playlist-delete-confirm.ui  playlist.ui  playlists-screen.ui  regenerate-token.ui  search-screen.ui  shortcuts.ui  simple-list.ui  small-album.ui  small-artist.ui  small-playlist.ui  track.ui  window.ui
src/widgets/: add_to_playlist.py  album.py  artist.py  box_album.py  box_artist.py  browse_screen.py  carousel_item.py  entry.py  entry_list.py  home_screen.py  image_card.py  login_form.py  mini_player.py  paginated_box_list.py  player_ui.py  playlist.py  playlist_delete_confirm.py  playlists_screen.py  regenerate_token.py  search_screen.py  simple_list.py  small_album.py  small_artist.py  small_playlist.py  track.py  window.py
